Adjusted input bar width to avoid error shifting

--- a/frontend/src/components/Auth/ModalForm.scss
+++ b/frontend/src/components/Auth/ModalForm.scss
@@ -5,10 +5,12 @@
     flex-direction: column;
     gap: 10px;
     margin-top: 25px;
+    padding: 0px 10px 0px 10px;
 
     .errors {
         color: red;
-        font-size: 14px;
+        font-size: 12px;
+        width: fit-content;
     }
 
     label {
@@ -23,7 +25,7 @@
         input {
             display: flex;
             padding-left: 5px;
-            width: 250px;
+            width: 300px;
             height: 40px;
             border: 1px rgb(202, 202, 202) solid;
             border-radius: 5px;
